# backend-marketplace

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: test-helper.md
.github/workflows/: ci.yml
backend_marketplace/: __main__.py  api.py  database.py
docs/: specification.md
tests/: test_api.py
